test/classes/errors/nilability-return-yield/return-unmanaged.good
return-unmanaged.chpl:3: In function 'P':
return-unmanaged.chpl:3: error: cannot initialize return value of type 'unmanaged C' from a 'unmanaged C?'
